--- a/css/style.less
+++ b/css/style.less
@@ -58,8 +58,8 @@ body,
     .ui-text4{
         height: 20px;
         margin-top: 30px;
-        -webkit-animation-delay: 2.4s+@yanchi;
-                animation-delay: 2.4s+@yanchi;
+        -webkit-animation-delay: 2.2s+@yanchi;
+                animation-delay: 2.2s+@yanchi;
         background-position: 50% -383px;
     }
     .ui-text5{
@@ -232,16 +232,21 @@ body,
     }
     .ui-text7{
         height: 64px;
-        margin-top: 10px;
+        margin-top: 20px;
         background-position: 50% -426px;
-        -webkit-animation-delay: 3s+@yanchi;
-                animation-delay: 3s+@yanchi;
+        -webkit-animation-delay: 3.5s+@yanchi;
+                animation-delay: 3.5s+@yanchi;
+        -webkit-animation-duration: .5s;
+                animation-duration: .5s;
     }
     .ui-text8{
         height: 64px;
+        margin-top: 15px;
         background-position: 50% -490px;
-        -webkit-animation-delay: 3.5s+@yanchi;
-                animation-delay: 3.5s+@yanchi;
+        -webkit-animation-delay: 3.7s+@yanchi;
+                animation-delay: 3.7s+@yanchi;
+        -webkit-animation-duration: .5s;
+                animation-duration: .5s;
     }
 }
 #story5{
@@ -503,41 +508,63 @@ body,
     .ui-text1{
         height: 88px;
         background-position: 50% 0;
+        -webkit-animation-delay: @yanchi;
+                animation-delay: @yanchi;
     }
     .ui-text2{
         height: 43px;
         margin-top: 63px;
-        background-position: 50% -150px;
+        background-position: 50% -148px;
+        -webkit-animation-delay: .8s+@yanchi;
+                animation-delay: .8s+@yanchi;
     }
     .ui-text3{
         height: 83px;
         background-position: 50% -192px;
+        -webkit-animation-delay: 1.2s+@yanchi;
+                animation-delay: 1.2s+@yanchi;
     }
     .ui-text4{
         height: 43px;
         background-position: 50% -276px;
+        -webkit-animation-delay: 1.6s+@yanchi;
+                animation-delay: 1.6s+@yanchi;
     }
     .ui-text5{
         height: 22px;
         margin-top: 10px;
         background-position: 50% -328px;
+        -webkit-animation-delay: 2.4s+@yanchi;
+                animation-delay: 2.4s+@yanchi;
     }
     .ui-text6{
         height: 28px;
         margin-top: 43px;
         background-position: 50% -393px;
+        opacity: 0;
+        -webkit-animation:fadeInUp 1s ease-out 3s+@yanchi, tada 1s linear 4.5s+@yanchi;
+                animation:fadeInUp 1s ease-out 3s+@yanchi, tada 1s linear 4.5s+@yanchi;
+        -webkit-animation-fill-mode: forwards;
+                animation-fill-mode: forwards;
     }
     .ui-text7{
         font-size: 0;
         height: 76px;
-        margin-top: 190px;
+        margin-top: 210px;
         text-align: center;
         background-position: 56% -613px;
+        opacity: 0;
+        -webkit-animation:bounceIn 1s ease-out 3s+@yanchi, pulse 1s linear 5s+@yanchi infinite;
+                animation:bounceIn 1s ease-out 3s+@yanchi, pulse 1s linear 5s+@yanchi infinite;
+        -webkit-animation-fill-mode: forwards;
+                animation-fill-mode: forwards;
     }
     .ui-text8{
         height: 24px;
         margin-top: 46px;
         background-position: 50% -735px;
+        -webkit-animation-delay: 3.8s+@yanchi;
+                animation-delay: 3.8s+@yanchi;
     }
     .leftbtn,
     .rightbtn{
@@ -564,31 +591,46 @@ body,
     .ui-text1{
         height: 44px;
         background-position: 50% 0;
+        -webkit-animation-delay: @yanchi;
+                animation-delay: @yanchi;
     }
     .ui-text2{
         height: 88px;
         margin-top: 60px;
         background-position: 50% -107px;
+        opacity: 0;
+        -webkit-animation:fadeInDown 1s ease-out .4s+@yanchi, flash .2s linear 2.8s+@yanchi;
+                animation:fadeInDown 1s ease-out .4s+@yanchi, flash .2s linear 2.8s+@yanchi;
+        -webkit-animation-fill-mode: forwards;
+                animation-fill-mode: forwards;
     }
     .ui-text3{
         height: 40px;
         margin-top: 58px;
         background-position: 50% -254px;
+        -webkit-animation-delay: 1.2s+@yanchi;
+                animation-delay: 1.2s+@yanchi;
     }
     .ui-text4{
         height: 191px;
         margin-top: 42px;
         background-position: 50% -337px;
+        -webkit-animation-delay: 1.6s+@yanchi;
+                animation-delay: 1.6s+@yanchi;
     }
     .ui-text5{
         height: 22px;
         margin-top: 65px;
-        background-position: 50% -584px;
+        background-position: 70% -584px;
+        -webkit-animation-delay: 2s+@yanchi;
+                animation-delay: 2s+@yanchi;
     }
     .ui-text6{
         height: 58px;
         margin-top: 84px;
         background-position: 50% -682px;
+        -webkit-animation-delay: 2.4s+@yanchi;
+                animation-delay: 2.4s+@yanchi;
     }
 }
 
