--- a/css/style.less
+++ b/css/style.less
@@ -65,8 +65,8 @@ body,
     .ui-text5{
         height: 57px;
         margin-top: 110px;
-        -webkit-animation-delay: 3s;
-                animation-delay: 3s;
+        -webkit-animation-delay: 2.5s+@yanchi;
+                animation-delay: 2.5s+@yanchi;
         background-position: 50% -517px;
     }
 }
@@ -102,6 +102,13 @@ body,
         -webkit-animation-delay: 1.8s+@yanchi;
                 animation-delay: 1.8s+@yanchi;
         background-position: 50% -278px;
+    }
+    .ui-text4{
+        height: 57px;
+        margin-top: 110px;
+        -webkit-animation-delay: 2s+@yanchi;
+                animation-delay: 2s+@yanchi;
+        background: url(../img/p1ct.png) no-repeat 50% -517px;
     }
 }
 #story3{
@@ -288,6 +295,17 @@ body,
                 animation-delay: 1.8s+@yanchi;
         -webkit-animation-duration: 1.5s;
                 animation-duration: 1.5s;
+    }
+    .switchimg{
+        position: absolute;
+        left:0;
+        top:0;
+        width:100%;
+        height:100%;
+        background: url(../img/p5bg2.jpg) no-repeat 50% 50%;
+        background-size: cover;
+        -webkit-animation-delay: 2.5s+@yanchi;
+                animation-delay: 2.5s+@yanchi;
     }
 }
 #story6{
