--- a/output/css/style.css
+++ b/output/css/style.css
@@ -103,6 +103,13 @@ body,
   animation-delay: 2.3s;
   background-position: 50% -278px;
 }
+#story2 .ui-text4 {
+  height: 57px;
+  margin-top: 110px;
+  -webkit-animation-delay: 2.5s;
+  animation-delay: 2.5s;
+  background: url(http://tjvvv.com/demo/jinba/img/p1ct.png) no-repeat 50% -517px;
+}
 #story3 {
   background: url(http://tjvvv.com/demo/jinba/img/p3bg.jpg) no-repeat 50% 0;
   background-size: cover;
@@ -288,6 +295,17 @@ body,
   animation-delay: 2.3s;
   -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s;
+}
+#story5 .switchimg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url(http://tjvvv.com/demo/jinba/img/p5bg2.jpg) no-repeat 50% 50%;
+  background-size: cover;
+  -webkit-animation-delay: 3s;
+  animation-delay: 3s;
 }
 #story6 {
   background: url(http://tjvvv.com/demo/jinba/img/p6bg.jpg) no-repeat 50% 0;
