--- a/css/style.less
+++ b/css/style.less
@@ -74,8 +74,8 @@ body,
     background: url(../img/p2bg.jpg) no-repeat 50% 0;
     background-size: cover;
     .middle-center{
-        -webkit-transform: translate3d(-50%,-100%,0);
-                transform: translate3d(-50%,-100%,0);
+        -webkit-transform: translate3d(-50%,-70%,0);
+                transform: translate3d(-50%,-70%,0);
     }
     .ui-text{
         width: 640px;
@@ -260,6 +260,7 @@ body,
     background: url(../img/p5bg.jpg) no-repeat 50% 0;
     background-size: cover;
     .middle-center{
+        z-index: 3;
         top: 6%;
         -webkit-transform: translate3d(-50%,0,0);
                 transform: translate3d(-50%,0,0);
@@ -305,6 +306,7 @@ body,
         position: absolute;
         left:0;
         top:0;
+        z-index: 2;
         width:100%;
         height:100%;
         background: url(../img/p5bg2.jpg) no-repeat 50% 50%;
