--- a/css/style.less
+++ b/css/style.less
@@ -653,6 +653,26 @@ body,
                 animation-delay: 2.4s+@yanchi;
     }
 }
+#share-mask{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height:100%;
+    z-index: 200;
+    display: none;
+    background-color:rgba(0,0,0,.5);
+    -webkit-animation-duration: .4s;
+            animation-duration: .4s;
+    .share-mask-tip{
+        position: absolute;
+        top:0;
+        left:0;
+        width: 100%;
+        height:100%;
+        background:url(../img/share.png) no-repeat 60% 20%;
+    }
+}
 
 @-webkit-keyframes guide{
     0%{
