--- a/output/css/style.css
+++ b/output/css/style.css
@@ -652,6 +652,26 @@ body,
   -webkit-animation-delay: 2.9s;
   animation-delay: 2.9s;
 }
+#share-mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s;
+}
+#share-mask .share-mask-tip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(http://tjvvv.com/demo/jinba/img/share.png) no-repeat 60% 20%;
+}
 @-webkit-keyframes guide {
   0% {
     -webkit-transform: translateY(50px);
