--- a/css/form.less
+++ b/css/form.less
@@ -1,10 +1,10 @@
 html{
     overflow: auto;
     height: auto;
+    background: #0a1c44 url(../img/formbg.jpg) repeat-y 0 0 fixed;
 }
 body{
-    background: #0a1c44 url(../img/formbg.jpg) no-repeat 0 0 fixed;
-    background-size: cover;
+    background-color: transparent;
 }
 .form-title{
     height: 100px;
@@ -43,7 +43,7 @@ body{
     textarea{
         width: 100%;
         height: 160px;
-        padding: .5em 1em;
+        padding: .3em .5em;
         color: #434343;
         border-radius: 10px;
     }
@@ -71,12 +71,12 @@ body{
         height: 64px;
         input[type='text'],
         input[type='date'],
-        input[type='phone'],
+        input[type='telephone'],
         input[type='email'],
         input[type='number']{
             width: 340px;
             height: 64px;
-            padding: .5em 1em;
+            padding: .3em .5em;
             color: #434343;
             border-radius: 10px;
         }
