--- a/css/form.less
+++ b/css/form.less
@@ -9,7 +9,7 @@ body{
 .form-title{
     height: 108px;
     margin: 45px 0 40px;
-    background: url(../img/form-title.png) no-repeat 50% 0;
+    background: url(../img/form-title.png?2) no-repeat 50% 0;
 }
 .form-wrap{
     width: 470px;
