--- a/output/css/form.css
+++ b/output/css/form.css
@@ -7,9 +7,9 @@ body {
   background-color: transparent;
 }
 .form-title {
-  height: 100px;
+  height: 108px;
   margin: 45px 0 40px;
-  background: url(http://tjvvv.com/demo/jinba/img/form-title.png) no-repeat 50% 0;
+  background: url(http://tjvvv.com/demo/jinba/img/form-title.png?2) no-repeat 50% 0;
 }
 .form-wrap {
   width: 470px;
