--- a/frontend/web/static/css/form.css
+++ b/frontend/web/static/css/form.css
@@ -95,6 +95,27 @@ body {
   border-radius: 10px;
   background: #51b5d2;
 }
+#share-mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s;
+}
+#share-mask .share-mask-tip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/share.png) no-repeat 85% 10%;
+}
+
 /* iCheck plugin Minimal skin, black
 ----------------------------------- */
 .icheckbox_minimal,
